@@ -8,6 +8,7 @@ export(getPage)
 export(getPost)
 export(getUsers)
 export(searchFacebook)
+export(searchPages)
 export(updateStatus)
 import(httr)
 import(rjson)
